removing acts as gem for another. various hot fixes

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,6 +7,7 @@
       %th Email
       %th Title
       %th Department
+      %th Tags
       %th{:colspan => "3"}
   %tbody
     - @users.each do |user|
@@ -14,7 +15,10 @@
         %td= user.name
         %td= user.email
         %td= user.title
-        %td= user.department
+        %td= user.department.department_name
+        %td= user.tag_names
+
+
         %td= link_to 'Show', user
         %td= link_to 'Edit', edit_user_path(user)
         %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
