--- a/app/views/departments/index.html.haml
+++ b/app/views/departments/index.html.haml
@@ -4,11 +4,13 @@
   %thead
     %tr
       %th Department name
+      %th Tags
       %th{:colspan => "3"}
   %tbody
     - @departments.each do |department|
       %tr
         %td= department.department_name
+        %td= department.tag_names
         %td= link_to 'Show', department
         %td= link_to 'Edit', edit_department_path(department)
         %td= link_to 'Destroy', department, method: :delete, data: { confirm: 'Are you sure?' }
