--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,17 +6,19 @@
       %th Title
       %th Details
       %th Department
-      %th User
+      %th User (Author)
       %th Post type
+      %th Tags
       %th{:colspan => "3"}
   %tbody
     - @posts.each do |post|
       %tr
         %td= post.title
         %td= post.details
-        %td= post.department
-        %td= post.user
+        %td= post.department.department_name
+        %td= post.user.name
         %td= post.post_type
+        %td= post.tag_names
         %td= link_to 'Show', post
         %td= link_to 'Edit', edit_post_path(post)
         %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
