--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    =link_to 'Home', root_path
     =link_to 'Posts', posts_path
     =link_to 'Users', users_path
     =link_to 'Departments', departments_path
