--- a/app/assets/stylesheets/shared/_colors.scss
+++ b/app/assets/stylesheets/shared/_colors.scss
@@ -9,7 +9,7 @@ $halfwhite:rgba(white, 0.5);
 $red:#ff0015;
 $orange:#FF4700;
 $yellow:#FFEB3B;
-$gold:#FFEB3B;
+$gold:#F6BB42;
 $highlighter:#EAEF3A;
 $green:#8BC34A;
 $brand-blue:#005596;
