--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,13 +17,12 @@
 
 
   %body
-    =link_to 'Home', root_path
-    =link_to 'Posts', posts_path
-    =link_to 'Users', users_path
-    =link_to 'Departments', departments_path
-    %hr
+    #application-container
+      =render 'shared/navbar'
+      = yield
 
-    = yield
+    =render 'shared/footer'
+
 
     / jQuery
     %script{:crossorigin => "anonymous", :integrity => "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=", :src => "https://code.jquery.com/jquery-3.3.1.min.js"}
@@ -31,7 +30,6 @@
     / BS4
     %script{:crossorigin => "anonymous", :integrity => "sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", :src => "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"}
     %script{:crossorigin => "anonymous", :integrity => "sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", :src => "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"}
-
 
     = javascript_include_tag 'application'
 
