--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,9 @@
     %title HitRails
     = csrf_meta_tags
 
+    / BS Tour
+    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/css/bootstrap-tour-standalone.min.css", :rel => "stylesheet"}
+
     / Hendrick Apps Global CSS
     %link{:href => "//v2-styleguide.hendrickapps.com/assets/stylesheets/main.bundle-5386506b.css", :rel => "stylesheet"}
 
@@ -12,6 +15,8 @@
 
     / Font Awesome
     %script{:defer => "defer", :src => "//use.fontawesome.com/releases/v5.0.6/js/all.js"}
+
+
 
     = stylesheet_link_tag 'application', media: 'all'
 
@@ -30,6 +35,10 @@
     / BS4
     %script{:crossorigin => "anonymous", :integrity => "sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q", :src => "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"}
     %script{:crossorigin => "anonymous", :integrity => "sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl", :src => "https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"}
+
+    / BS Tour
+    %script{:crossorigin => "anonymous", :src => "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/js/bootstrap-tour-standalone.min.js"}
+
 
     = javascript_include_tag 'application'
 
