--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -21,11 +21,8 @@
               %path.st0{:d => "M90.3,77.4c-0.4-0.2-0.8-0.3-1.3-0.4c-0.5,0-1.2-0.1-1.9-0.1c-0.6,0-1.1,0-1.5,0c-0.4,0-0.8-0.1-1-0.2                     c-0.3-0.1-0.5-0.3-0.6-0.6c-0.1-0.3-0.2-0.7-0.2-1.3c0-0.4,0-0.8,0.1-1c0.1-0.3,0.2-0.5,0.4-0.6c0.2-0.1,0.5-0.2,0.9-0.3                     c0.4-0.1,0.9-0.1,1.6-0.1c0.6,0,1.2,0,1.5,0c0.4,0,0.7,0.1,0.9,0.3c0.2,0.1,0.4,0.4,0.4,0.6c0.1,0.3,0.1,0.7,0.1,1.2h1.4                     c0-0.8-0.1-1.4-0.3-1.9c-0.2-0.5-0.5-0.8-0.9-1c-0.4-0.2-0.8-0.3-1.4-0.4c-0.5,0-1.1-0.1-1.8-0.1c-0.7,0-1.4,0-1.9,0.1                     s-1,0.2-1.4,0.4c-0.4,0.2-0.6,0.6-0.8,1c-0.2,0.5-0.3,1.1-0.3,1.9c0,0.8,0.1,1.4,0.4,1.8c0.2,0.4,0.6,0.7,1,0.9                     c0.4,0.2,0.9,0.3,1.4,0.3c0.5,0,1.1,0.1,1.7,0.1c0.5,0,1,0.1,1.4,0.1c0.4,0,0.7,0.1,1,0.2c0.3,0.1,0.5,0.3,0.6,0.6                     c0.1,0.3,0.2,0.7,0.2,1.3c0,0.6-0.1,1-0.2,1.4c-0.1,0.3-0.3,0.6-0.5,0.7c-0.2,0.1-0.6,0.2-1,0.3c-0.4,0-1,0-1.6,0s-1.2,0-1.6,0                     c-0.4,0-0.7-0.1-0.9-0.3c-0.2-0.2-0.4-0.4-0.4-0.8c-0.1-0.4-0.1-0.9-0.1-1.5h-1.4c-0.1,0.9,0,1.6,0.1,2.1s0.4,0.9,0.8,1.2                     c0.4,0.3,0.8,0.4,1.4,0.5c0.6,0.1,1.3,0.1,2,0.1c0.8,0,1.4,0,2-0.1c0.6,0,1.1-0.2,1.5-0.4c0.4-0.2,0.7-0.6,0.9-1                     c0.2-0.5,0.3-1.1,0.3-2c0-0.8-0.1-1.4-0.3-1.9C90.9,77.9,90.6,77.6,90.3,77.4z"}
         .block.links
           %label Departments
-          %a{:href => "#"} Engineering
-          %a{:href => "#"} Operations
-          %a{:href => "#"} Purchasing
-          %a{:href => "#"} Software
-          %a{:href => "#"} Project management
+          -get_departments.each do |dept|
+            %a{href: department_path(dept)}=dept.department_name
         .block.links
           %label Resources
           %a{:href => "#"} Leadership
