--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,8 @@
 @import "shared/tag-search-control";
 @import "shared/footer";
 
+@import "shared/homepage";
+
 body {
   background: $dark;
 
@@ -12,175 +14,55 @@ body {
   }
 }
 
-#welcome-container {
-  background: $brand url(/web-images/welcome-image.jpg) no-repeat;
-  background-position: top center;
-  background-size: 100%;
-  min-height: rem(600);
-  border-bottom: 1px solid $light;
-
-  .welcome-message {
-    position: relative;
-    top: rem(100);
-
-    span {
-      font-family: 'Titillium Web';
-      display: block;
-      font-weight: 300;
-      color: $dark;
-      font-size: rem(40);
-
-      &.highlight {
-        font-weight: 700;
-        color: $gold;
-      }
-    }
-  }
-}
-
-#teammates {
-  background: $white url(/web-images/teammates-image.png) no-repeat;
-  background-position: bottom center;
-  background-size: 85%;
-  padding: rem(150) 0;
-  .container {
+// Application Layout
+#application-container {
+  .app-layout {
     display: flex;
-    flex-direction: row-reverse;
+    align-items: stretch;
 
-    .message {
+    #sidebar,
+    #content-area {
       flex: 0 0 auto;
-      width: 60%;
-      text-align: left;
-      background: rgba($white, 0.9);
-      padding: rem(50)
     }
 
-    .message {
-      .counter-element {
-        margin-bottom: rem(20);
-        justify-content: left;
-      }
-    }
-  }
-}
-
-#feature-container {
-  .blocks {
-    @include flex;
-    flex-wrap: wrap;
-    border-top: 1px solid $light;
-
-    article {
-      width: 50%;
-      padding: rem(80);
-      border-right: 1px solid $light;
-      border-bottom: 1px solid $light;
-
-      h3 {
-        transition: all 0.3s;
-        &:after { transition: all 0.3s; }
-      }
-
-      &:nth-child(even) { border-right: none; }
-
-      date {
-        font-style: italic;
-        margin-bottom: rem(10);
-        display: block;
-        color: $ccc;
-        .icon {
-          margin-right: rem(10);
-        }
-      }
-
-
-      &:hover {
-        h3 {
-          color: $blue;
-          &:after { width: 30%; }
-        }
-      }
-    }
-  }
-}
-
-#customers-served {
-  background: $white;
-  padding: rem(150) 0;
-  text-align: center;
-
-  .message {
-    margin-top: rem(40);
-    h1:after { margin: rem(20) auto; }
-  }
-
-  #brand-partners {
-    .logos {
-      @include flex;
-      flex-wrap: wrap;
-      justify-content: center;
-
-      .logo {
-        width: 10%;
-        text-align: center;
-        opacity: 0.5;
-        img {
-          width: rem(100);
-        }
-      }
-    }
-  }
-}
-
-
-
-#map-container {
-  background: $light;
-  .map-container {
-    iframe {
-      width: 100%;
-      height: rem(600);
-    }
-  }
-}
-
-// Counter Component
-// ===================================
-.counter-element {
-  @include flex;
-  justify-content: center;
-
-  .numbers {
-    min-width: rem(350);
-    position: relative;
-
-    &:after {
-      content: '';
-      display: block;
-      width: 100%;
-      position: absolute;
-      height: 1px;
+    #sidebar {
+      width: 20%;
       background: $white;
-      top: 50%;
     }
-    span {
-      @include border-radius;
-      border-bottom: 3px solid $brand;
-      text-align: center;
-      font-family: 'Titillium Web';
-      display: inline-block;
-      font-weight: 700;
-      color: $white;
-      background: $blue;
-      font-size: rem(60);
-      padding: rem(10) rem(20);
 
-      &.comma {
-        border-bottom: none;
-        background: $white;
-        color: $blue;
-        padding: rem(10);
-      }
+    #content-area {
+      flex:1 1 auto;
+      background: $light;
     }
+  }
+}
+
+#sidebar {
+  border-right:1px solid $ccc;
+
+  .banding,
+  .tag-cluster,
+  .links,
+  .search {
+    padding: rem(20);
+
+    label {
+      display: block;
+    }
+  }
+
+  .banding {
+    text-align: center;
+    border-bottom:1px solid $light;
+  }
+
+  .search {
+    form input { width: 100%; }
+  }
+
+  .tag-cluster {}
+
+  .links {
+    a { display: block; }
   }
 }
