adding tag search

--- a/app/assets/stylesheets/shared/_tag-search-control.scss
+++ b/app/assets/stylesheets/shared/_tag-search-control.scss
@@ -1,20 +1,1 @@
-$tag-control-height: rem(60);
-#tag-search-control {
-  padding: rem(10);
-
-  form.search-block[role='search'] {
-    @include flex;
-
-    input[type='text'] {
-      @include box(1 1 auto);
-      display: block;
-      height: $tag-control-height;
-      text-indent: rem(20);
-      margin-right: rem(20);
-    }
-
-    button {
-      width: rem(60);
-    }
-  }
-}
+@import "react-tagsinput/react-tagsinput.css";
