updating the search component

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,9 @@
 @import "shared/colors";
 @import "shared/vars";
 @import "shared/mixins";
+@import "shared/application-bar";
 @import "shared/tag-search-control";
 @import "shared/footer";
-
 @import "shared/homepage";
 
 body {
