--- a/app/assets/stylesheets/shared/_homepage.scss
+++ b/app/assets/stylesheets/shared/_homepage.scss
@@ -65,6 +65,8 @@
       h3 {
         transition: all 0.3s;
         &:after { transition: all 0.3s; }
+
+        a { text-decoration: none; color: inherit; }
       }
 
       &:nth-child(even) { border-right: none; }
