--- a/app/assets/stylesheets/shared/_application-bar.scss
+++ b/app/assets/stylesheets/shared/_application-bar.scss
@@ -43,7 +43,11 @@
           margin: 0 rem(10);
         }
 
-        a { font-size: rem(14); color: $dark; }
+        a {
+          font-size: rem(14); color: $dark;
+          outline: none;
+          text-decoration: none;
+        }
       }
 
       &:last-child { flex: 1 1 auto; }
