--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -72,7 +72,7 @@
     / BS Tour
     %script{:crossorigin => "anonymous", :src => "https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.11.0/js/bootstrap-tour-standalone.min.js"}
 
-    / = javascript_include_tag 'application'
+    = javascript_include_tag 'application'
     = javascript_pack_tag 'application'
 
 
