working on app layout

--- a/app/assets/stylesheets/shared/_tag-search-control.scss
+++ b/app/assets/stylesheets/shared/_tag-search-control.scss
@@ -84,3 +84,12 @@
     }
   }
 }
+
+#main-dept-view-search {
+  .app-tag-input {
+    @include border-radius(0);
+    border:none;
+    border-bottom:1px solid $ccc;
+    height: rem(50);
+  }
+}
