--- a/app/views/departments/show.html.haml
+++ b/app/views/departments/show.html.haml
@@ -1,7 +1,9 @@
+#main-dept-view-search
+  =react_component('TagSearch', {taggings: all_tags})
 .container.p-5
   %h1= @department.department_name
   %p.lead= @department.mission
   -@posts.each do |post|
-    =link_to post_path(post) do ||
+    =link_to department_post_path(post) do ||
       %h3=truncate(post.title, length: 50)
       %p.lead=truncate(post.details, length: 200)
