--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,6 +14,6 @@
 %p
   %strong Post type:
   = @post.post_type
-= link_to 'Edit', edit_department_post_path(@post)
+= link_to 'Edit', edit_post_path(@post)
 |
-\#{link_to 'Back', department_posts_path}
+\#{link_to 'Back', posts_path}
