--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,5 +1,4 @@
-%h1 Editing Post
-= render 'form', post: @post
-= link_to 'Show', @post
-|
-\#{link_to 'Back', posts_path}
+.container
+  %h1 Editing Post
+  = render 'form', post: @post
+
