working on the layout and forms. adding a wysiwyg

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "shared/mixins";
 @import "shared/application-bar";
 @import "shared/tag-search-control";
+@import "shared/forms";
 @import "shared/footer";
 @import "shared/homepage";
 @import "shared/searchpage";
